--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "symfony/yaml": "^3.4|^4.0|^5.0"
     },
     "conflict": {
-        "twig/twig": "<1.41|<2.10"
+        "twig/twig": "<1.41|>=2.0,<2.10"
     },
     "suggest": {
         "psr/log": "Allows logging"
